tests/suite/snapshots/suite__check__tests__check__bad_undeclared_var_1.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_undeclared_var_1.xi:2:5]
   │
 2 │     x = 1
   ·     ┬  
   ·     ╰── Unbound variable x
───╯

